Parallelise some tasks (#1434)
`createLaunchConfig`, `mergeDiagnosticsJson`, `createInitScript` and `createCheckScript` can all now run in parallel within the same project.